left panel css clean up

--- a/src/frontend_react/src/styles/TaskList.css
+++ b/src/frontend_react/src/styles/TaskList.css
@@ -6,14 +6,18 @@
     justify-content: space-between;
     padding: 8px 16px;
     cursor: pointer;
-    background-color: #fafafa; /* tokens.colorNeutralBackground1 */
     transition-property: background-color;
     transition-duration: 0.1s; /* tokens.durationFaster */
     transition-timing-function: cubic-bezier(0.33, 0.00, 0.67, 1.00); /* tokens.curveEasyEase */
 }
 
-.task-list-task-item:hover {
-    background-color: #f5f5f5; /* tokens.colorNeutralBackground1Hover */
+.task-accordion-header {
+    color: var(--colorNeutralForeground3);
+    padding: 0px 16px 0px 0;
+    background-color: transparent;
+    cursor: pointer;
+    justify-content: space-between;
+    height: 32px;
 }
 
 .task-list-task-date {
