functionality review to taskdetails

--- a/src/frontend_react/src/styles/TaskDetails.css
+++ b/src/frontend_react/src/styles/TaskDetails.css
@@ -142,3 +142,6 @@
     font-size: var(--fontSizeBase300);
     font-weight: var(--fontWeightSemibold);
 }
+.strikethrough {
+    text-decoration: line-through;
+}
