--- a/src/frontend_react/src/styles/PlanPanelLeft.css
+++ b/src/frontend_react/src/styles/PlanPanelLeft.css
@@ -1,12 +1,11 @@
 /* APP */
 
-
 .tab {
   display: flex;
   align-items: center;
   gap: 8px;
   color: var(--colorNeutralForeground2);
-  padding: 8px 16px;
+  padding: 8px;
   border-radius: 6px;
   font-size: 14px;
   text-decoration: none;
@@ -22,6 +21,20 @@
   background-color: var(--colorSubtleBackgroundPressed);
 }
 
+.tab.tab-new-task {
+  margin: 0px 8px;
+}
+
+.tab.tab-new-task-icon {
+  display: flex;
+  width: 40px;
+  height: 40px;
+  background-color: var(--colorNeutralBackground2);
+  justify-content: center;
+  align-items: center;
+  border-radius: 16px;
+  box-sizing: border-box;
+}
 
 /* TASKLIST */
 
@@ -35,7 +48,8 @@
   transition: background-color 0.2s ease-in-out;
   font-size: var(--fontSizeBase00);
   gap: 14px;
-
+  min-height: 54px;
+  box-sizing: border-box;
 }
 
 .task-tab:hover {
@@ -46,7 +60,6 @@
   background-color: var(--colorNeutralBackground1Pressed);
   color: var(--colorNeutralForeground1);
   font-weight: 500;
-  
 }
 
 .task-tab .sideNavTick {
@@ -58,7 +71,6 @@
   flex-shrink: 0;
   transition: opacity 0.2s ease-in-out;
   margin-left: -8px;
-  
 }
 
 .task-tab.active .sideNavTick {
@@ -73,4 +85,3 @@
 .task-tab:hover .task-menu-button {
   opacity: 1;
 }
-
