--- a/src/frontend_react/src/styles/TaskDetails.css
+++ b/src/frontend_react/src/styles/TaskDetails.css
@@ -2,15 +2,15 @@
 /* TaskDetails.css */
 
 .status-icon-completed {
-    color: var(--colorPaletteGreenForeground1);
+    color: var(--colorPaletteSeafoamBorderActive);
 }
 
 .status-icon-planned {
-    color: var(--colorBrandForeground1);
+    color: var(--colorNeutralStroke1);
 }
 
 .status-icon-rejected {
-    color: var(--colorPaletteRedForeground1);
+    color: var(--colorStatusDangerBorderActive);
 }
 
 .task-details-container {
@@ -37,7 +37,7 @@
 .task-details-progress-card {
     display: flex;
     align-items: center;
-    padding: 12px;
+    padding: 12px 16px 12px 12px;
     background-color: var(--colorNeutralBackground4);
     border-radius: var(--borderRadiusXLarge);
     width: 100%;
@@ -68,6 +68,7 @@
     display: flex;
     align-items: center;
     gap: 8px;
+    min-height: 32px;
 }
 
 .task-details-status-icon {
