--- a/src/frontend_react/src/styles/TaskDetails.css
+++ b/src/frontend_react/src/styles/TaskDetails.css
@@ -10,7 +10,7 @@
 }
 
 .status-icon-rejected {
-    color: var(--colorStatusDangerBorderActive);
+    color: var(--colorNeutralStroke1);
 }
 
 .task-details-container {
@@ -39,7 +39,8 @@
     align-items: center;
     padding: 12px 16px 12px 12px;
     background-color: var(--colorNeutralBackground4);
-    border-radius: var(--borderRadiusXLarge);
+    /* border-radius: var(--borderRadiusXLarge); */
+        border-radius: 16px;
     width: 100%;
 }
 
@@ -96,7 +97,7 @@
 .task-details-action-buttons {
     display: flex;
     align-items: center;
-    gap: 8px;
+    flex-wrap: nowrap;
 }
 
 .task-details-action-button {
